<resources>
    <string name="a_loop_text">A Loop</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_display_arrivals_canceled">Canceled</string>
    <string name="act_display_arrivals_due">Due</string>
    <string name="act_display_arrivals_no_eta">No ETA</string>
    <string name="action_flashlight_toggle">Toggle Flashlight</string>
    <string name="action_radius">Search Radius</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="action_search">Search</string>
    <string name="activity_directions_walking_duration_text">Time to walk: %1s</string>
    <string name="activity_qr_loading_qr_error_offline_text">No internet connection.</string>
    <string name="activity_qr_loading_qr_error_unrecognizable_text">Could not read QR code.</string>
    <string name="activity_qr_scanning_camera_permission_dialog_message">Camera permission required to scan qr codes.</string>
    <string name="activity_qr_scanning_camera_permission_dialog_title">Unable to use camera</string>
    <string name="activity_qr_scanning_title">Scan QR Code</string>
    <string name="aerial_tram_text">Aerial Tram</string>
    <string name="app_name">TriMet Go</string>
    <string name="app_rater_dialog_message">If you enjoy using TriMet Go, please take a moment to rate it. Thanks for your support!</string>
    <string name="app_rater_dialog_negative_button">Later</string>
    <string name="app_rater_dialog_neutral_button">No thanks</string>
    <string name="app_rater_dialog_positive_button">Rate</string>
    <string name="app_rater_dialog_title">Rate TriMet Go</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrival_early_in_minutes_header">%1$s min early</string>
    <string name="arrival_late_in_minutes_header">%1$s min late</string>
    <string name="arrival_on_time">On time</string>
    <string name="b_loop_text">B Loop</string>
    <string name="base_arrival_url">https://developer.trimet.org/ws/v2/arrivals</string>
    <string name="base_directions_url">https://maps.googleapis.com/maps/api/directions/json?</string>
    <string name="base_route_url">https://developer.trimet.org/ws/V1/routeConfig/json/true/streetcar/true</string>
    <string name="base_stop_location_url">https://developer.trimet.org/ws/V1/stops/json/true/showRoutes/true</string>
    <string name="blue_line_text">Blue</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="circle_a_loop">A</string>
    <string name="circle_b_loop">B</string>
    <string name="circle_blue_line">B</string>
    <string name="circle_green_line">G</string>
    <string name="circle_ns_line">NS</string>
    <string name="circle_orange_line">O</string>
    <string name="circle_red_line">R</string>
    <string name="circle_wes">W</string>
    <string name="circle_yellow_line">Y</string>
    <string name="cl_line_text">CL</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">313850f7-9aa9-44ab-aec9-5346441a50ec</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_forgot_password_button_label">Forgot password</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_login_dispatch_user_logged_in">User logged in, starting: </string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed">Facebook login failed, exception: </string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">Updating user object after Facebook login failed, exception: </string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">Parse username/password login failed, exception: </string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">Parse signup failed, exception: </string>
    <string name="com_parse_ui_login_warning_password_reset_failed">Parse password reset failed, exception: </string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">Twitter login failed, exception: </string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">Updating user object after Twitter login failed, exception: </string>
    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_progress_dialog_text">Loading...</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="pref_about_us_title">About Us</string>
    <string name="pref_summary_developer_info">Application Code/Design: GeneralKaos666</string>
    <string name="pref_summary_license_info">Icons were taken from the following libraries:\n QR Code Error icons: Ionicons (http://ionicons.com/), licensed under MIT\n QR Code Scanning button icon: FontAwesome (fontawesome.io), licensed under SIL OFL 1.1\n Navigation drawer icons, and all other toolbar/FAB icons: Google Material (https://design.google.com/icons/), licensed under CC Attribution 4.0\n</string>
    <string name="pref_summary_only_show_route_selected">You can show other arrivals by clicking on the Show other arrivals button in the arrivals page.</string>
    <string name="pref_title_developer_info">Developer Info</string>
    <string name="pref_title_license_info">Licenses</string>
    <string name="pref_title_only_show_route_selected">Only show selected route\'s arrivals</string>
    <string name="pref_title_stops_category">Stops</string>
    <string name="pref_title_version_info">Version</string>
    <string name="pref_theme_title">App Theme</string>
    <string name="pref_theme_summary">Choose light, dark, or system default</string>
</resources>