<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_stops_category"
        android:key="pref_key_stops">
        <CheckBoxPreference
            android:title="@string/pref_title_only_show_route_selected"
            android:key="pref_key_only_show_route_selected"
            android:summary="@string/pref_summary_only_show_route_selected"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_theme_title"
        android:key="pref_key_theme_category">
        <ListPreference
            android:title="@string/pref_theme_title"
            android:key="pref_key_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="system"
            android:summary="@string/pref_theme_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_us_title"
        android:key="pref_key_about_us">
        <Preference
            android:title="@string/pref_title_version_info"
            android:key="pref_key_version_info"/>
        <Preference
            android:title="@string/pref_title_developer_info"
            android:key="pref_key_developer_info"
            android:summary="@string/pref_summary_developer_info"/>
        <Preference
            android:title="@string/pref_title_license_info"
            android:key="pref_key_license_info"
            android:summary="@string/pref_summary_license_info"/>
    </PreferenceCategory>
</PreferenceScreen>
